49 done, react-redux

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,6 +1,6 @@
-.header {
+header {
   grid-area: h;
-  background-color: #282c34;
+  background-color: #563d7c;
   font-size: calc(10px + 2vmin);
   color: white;
 }
