--- a/src/App.scss
+++ b/src/App.scss
@@ -1,17 +1,34 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 
+*,
+:before,
+:after {
+  box-sizing: border-box;
+}
+
 body {
-  font: 14px/1.2, 'Roboto', sans-serif;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 14px;
+  line-height: 1.4;
+  margin: 0;
 }
 
 img {
-  height: auto;
+  vertical-align: top;
+  max-width: 100%;
 }
 
 ul {
   list-style: none;
   padding: 0;
   margin: 0;
+}
+
+textarea {
+  resize: vertical;
+  min-height: 100px;
+  border-radius: 4px;
+  padding: 4px;
 }
 
 .app {
@@ -21,6 +38,7 @@ ul {
 
 .App-logo {
   width: 85px;
+  animation: App-logo-spin infinite 10s linear;
 }
 
 .link {
@@ -34,6 +52,7 @@ ul {
   grid-template-columns: 4fr 12fr;
 
   grid-template-areas: "h h" "n c";
+  height: 100vh;
 }
 
 .content {
