--- a/src/App.scss
+++ b/src/App.scss
@@ -31,6 +31,26 @@ textarea {
   padding: 4px;
 }
 
+header {
+  grid-area: h;
+  background-color: #563d7c;
+  font-size: calc(10px + 2vmin);
+  color: white;
+
+  &.header {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 15px;
+  }
+}
+
+.logo {
+  animation: App-logo-spin infinite 10s linear;
+  width: 76px;
+  pointer-events: none;
+}
+
 .app {
   position: relative;
   overflow: hidden;
